--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "cors": "^2.8.5",
     "date-fns": "^3.2.0",
     "dotenv": "^16.3.1",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "mongoose-sequence": "^6.0.0",
     "uuid": "^9.0.1"
