--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-fileupload": "^1.4.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "mongoose-sequence": "^6.0.0",
