--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "mongoose-sequence": "^6.0.0",
+    "nodemailer": "^6.9.9",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
